# GlacierPlane

./: .gitattributes  .gitignore  README.md  docker-compose.yml  glacier.yml
control-plane/: .dockerignore  .env.example  Cargo.toml  Dockerfile
control-plane/migrations/: 001_schema.sql
control-plane/src/: background_tasks.rs  dispatcher.rs  error.rs  github.rs  main.rs  pipeline.rs  webhooks.rs
control-plane/src/db/: agents.rs  builds.rs  jobs.rs  metadata.rs  mod.rs  models.rs  organizations.rs  queues.rs  users.rs
control-plane/src/handlers/: admin.rs  agent_tokens.rs  agents.rs  auth.rs  builds.rs  jobs.rs  mod.rs  organizations.rs  pipelines.rs  queues.rs
control-plane/src/handlers/shared/: build_status.rs  job_response.rs  mod.rs  pagination.rs  tokens.rs  user_context.rs
control-plane/src/middleware/: agent_auth.rs  mod.rs
control-plane/src/types/: api.rs  mod.rs  v3.rs  webhook.rs
scripts/: docker_helpers.sh  test_api_smoke.sh  test_e2e_agent.sh  test_e2e_webhook.sh
ui/: .env.example  .gitignore  index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src/components/: AgentsList.tsx  Login.tsx  OrgSettings.tsx  PipelineDetail.tsx  PipelineForm.tsx  PipelinesList.tsx  QueueDetail.tsx  QueueForm.tsx  QueuesList.tsx  Register.tsx  TokenDetail.tsx  TokensList.tsx  UserTokenDetail.tsx
